# Transfer-testing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
books/: automated.py  transfer_testing.py
imagenetExample/: scheduler.py  smallDataTest.py  testSplitter.py
imagenetExample/exemplary_small_data_results/: testSplit0.1.json
modelTesting/: modelTesting.py
pocWithCars/: 01_prepare.2.py  Conv_2_model.py  Conv_2_model_keras.py  README.md  poc.py  scheduler.py
pocWithCars/exemplaryResults/: testSplit0.1.json
src/assets/: README.md
src/dataset/: modules.py
src/examples/: simple_imagenet.py
transfer-testing/: __init__.py
transfer-testing/assets/: etl.py
transfer-testing/dataset/: books.py  imagenet.py
transfer-testing/models/: poc_with_cars.py
transfer-testing/utils/: datasets.py
