[tool.pdm]

[project]
name = "transfer-testing"
version = "0.1.0"
description = "Research project at GUT"
authors = [
    {name = "Oksana Diakun"},
    {name = "Patryk Sobolewski"},
    {name = "Piotr Wróblewski"},
    {name = "Szymon Zaborowski", email = "zabor2432@gmail.com"},
    {name = "Piotr Cichocki"}

]
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "mlflow>=2.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
