[project]
name = "transfer-testing"
version = "0.1.0"
description = "Research project at GUT"
authors = [
    {name = "Oksana Diakun"},
    {name = "Patryk Sobolewski"},
    {name = "Piotr Wróblewski"},
    {name = "Szymon Zaborowski", email = "zabor2432@gmail.com"},
    {name = "Piotr Cichocki"}

]
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "mlflow>=2.3.2",
    "kaggle>=1.5.13",
    "lightning>=2.0.3",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.3",
    "dagster>=1.3.13",
    "dagit==1.3.13",
]


requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"



[tool.black]
line-length = 79
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

[flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 79
count = true
